# vdi

./: .gitignore  how_to_config.txt  interfaces  local.conf  policy.json  vmaccess.txt
python_vdiclient/: HACKING.rst  PKG-INFO  README.rst  group.json  openstack-common.conf  pvdiclient.vpj  pvdiclient.vpw  pvdiclient.vpwhistu  pvdiclient.vtg  setup.cfg  setup.py  setupok.py
python_vdiclient/doc/source/: api.rst  conf.py  index.rst
python_vdiclient/python_saharaclient.egg-info/: PKG-INFO  SOURCES.txt
python_vdiclient/python_vdiclient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
python_vdiclient/vdiclient/: client.py  create_vm.sh  shell.py  test.sh  version.py
python_vdiclient/vdiclient/api/: base.py  client.py  cluster_templates.py  clusters.py  data_sources.py  groups.py  helpers.py  httpclient.py  images.py  job_binaries.py  job_binary_internals.py  job_executions.py  jobs.py  node_group_templates.py  parameters.py  plugins.py  pools.py  shell.py  test_vm.py  utils.py
python_vdiclient/vdiclient/common/: cliutils.py  strutils.py
python_vdiclient/vdiclient/common/apiclient/: auth.py  base.py  fake_client.py
python_vdiclient/vdiclient/nova/: base.py
python_vdiclient/vdiclient/tests/: test_resource.py
vdi_openstack/: CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  PKG-INFO  README.rst  create_db.sh  openstack-common.conf  setup.cfg  test.sh  vdirestful.vpj  vdirestful.vpw  vdirestful.vpwhistu
vdi_openstack/doc/source/: conf.py
vdi_openstack/etc/vdi/: vdi.conf  vdi.conf.new
vdi_openstack/tools/: get_auth_token.py  get_auth_token_v3.py  lintstack.py
vdi_openstack/vdi/: config.py  context.py  exceptions.py  main.py  version.py
vdi_openstack/vdi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json
vdi_openstack/vdi/api/: base.py  v10.py  v11.py
vdi_openstack/vdi/cli/: vdi_api.py  vdi_subprocess.py
vdi_openstack/vdi/conductor/: __init__.py  api.py  manager.py  objects.py  resource.py
vdi_openstack/vdi/db/: __init__.py  api.py  base.py
vdi_openstack/vdi/locale/: sahara.pot
vdi_openstack/vdi/middleware/: auth_valid.py
vdi_openstack/vdi/plugins/: base.py  provisioning.py
vdi_openstack/vdi/service/: api.py  direct_engine.py  engine.py  heat_engine.py  networks.py  periodic.py  trusts.py  validation.py  volumes.py
vdi_openstack/vdi/swift/: swift_helper.py
vdi_openstack/vdi/tests/: README.rst
vdi_openstack/vdi/topology/: topology_helper.py
vdi_openstack/vdi/utils/: agent_remote.py  api.py  api_validator.py  crypto.py  files.py  general.py  patches.py  procutils.py  rpc.py  sqlatypes.py  ssh_remote.py  tempfiles.py  timing.py  xmlutils.py
(+744 files in other folders)
