[metadata]
name = python-vdiclient
version = 1.0
summary = Client library for VDI API
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = chingsun@huawei.com
home-page = https://github.com/chingsun/vdi
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = 
    vdiclient

[entry_points]
console_scripts =
    vdi = vdiclient.shell:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
