[metadata]
name = vdi
version = 2014.3
summary = vdi project
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/vdi/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    vdi

data_files =
    share/vdi = etc/vdi/*

[entry_points]
console_scripts =
    vdi-api = vdi.cli.vdi_api:main
    vdi-db-manage = vdi.db.migration.cli:main
    _vdi-subprocess = vdi.cli.sahara_subprocess:main

vdi.cluster.plugins =
    vanilla = vdi.plugins.vanilla.plugin:VanillaProvider
    hdp = vdi.plugins.hdp.ambariplugin:AmbariPlugin
    idh = vdi.plugins.intel.plugin:IDHProvider

vdi.infrastructure.engine =
    direct = vdi.service.direct_engine:DirectEngine
    heat = vdi.service.heat_engine:HeatEngine

vdi.remote =
    ssh = vdi.utils.ssh_remote:SshRemoteDriver
    agent = vdi.utils.agent_remote:AgentRemoteDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vdi/locale/sahara.pot

[compile_catalog]
directory = vdi/locale
domain = vdi

[update_catalog]
domain = vdi
output_dir = vdi/locale
input_file = vdi/locale/vdi.pot
